; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_test_config_stress__trailing_backslash.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_test_config_stress__trailing_backslash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"C:\\iam\\some\\windows\\path\\\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"git-test-config\00", align 1
@TEST_CONFIG = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"windows.path\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_stress__trailing_backslash() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i8*, align 8
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  %3 = call i32 @git_path_exists(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @cl_assert(i32 %3)
  %5 = load i32, i32* @TEST_CONFIG, align 4
  %6 = call i32 @git_config_open_ondisk(i32** %1, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @git_config_set_string(i32* %8, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8* %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_config_free(i32* %12)
  %14 = load i32, i32* @TEST_CONFIG, align 4
  %15 = call i32 @git_config_open_ondisk(i32** %1, i32 %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32*, i32** %1, align 8
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @assert_config_value(i32* %17, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8* %18)
  %20 = load i32*, i32** %1, align 8
  %21 = call i32 @git_config_free(i32* %20)
  ret void
}

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_exists(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i32) #1

declare dso_local i32 @git_config_set_string(i32*, i8*, i8*) #1

declare dso_local i32 @git_config_free(i32*) #1

declare dso_local i32 @assert_config_value(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
